welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: ')' expected but '=' found.
if ( (a=10 || b=10) || ((a+b)=10) ) {
                             ^makes10:6: error: ')' expected but '}' found.
} 
^